# burn

./: Dockerfile  buildDocker.sh
examples/text-translation/: Cargo.toml  vars.sh
examples/text-translation/examples/: clean-addresses-infer-gpttokenizer.rs  clean-addresses-minitrain-gpttokenizer.rs  clean-addresses-train-gpttokenizer.rs  db-pedia-infer-gpttokenizer-cpu.rs  db-pedia-infer-gpttokenizer.rs  db-pedia-train-gpttokenizer.rs  db-pedia-train.rs  infer-addressmultiformat-flant5small-gpttokenizer.rs  infer-addressparsing-gpttokenizer.rs  pretrain-c4-gpttokenizer.rs  pretrain-db-pedia-gpttokenizer.rs  pretrain-multitask-flant5small-gpttokenizer.rs  pretrain-multitask-flant5small-multigpu-gpttokenizer.rs  pretrain-multitask-gpttokenizer.rs  pretrain-refinedweb-gpttokenizer.rs  test-encoder.rs  train-addressmultiformat-flant5small-gpttokenizer.rs  train-addressparsing-gpttokenizer.rs  translation-db-pedia-infer.rs
examples/text-translation/src/: inference.rs  lib.rs  model.rs  training.rs
examples/text-translation/src/addresses/: batcher.rs  csv_dataset.rs  mod.rs
examples/text-translation/src/data/: batcher.rs  mod.rs
examples/text-translation/src/data/dataset/: address_brizo_multiformat.rs  c4_pretrain.rs  dbpedia.rs  dbpedia_classification.rs  dbpedia_guess_title.rs  dbpedia_pretrain.rs  guess_the_country.rs  masking.rs  mod.rs  multitask_pretrain.rs  postgres.rs  refinedweb.rs  vec.rs
examples/text-translation/src/learner/: output.rs
examples/web-inference/: Cargo.toml  Dockerfile
examples/web-inference/src/: main.rs
(+9 files in other folders)
