[package]
authors = ["jeangab <jeangabriel.gc@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "text-translation"
publish = false
version = "0.1.0"

[features]
# default = ["burn/dataset-sqlite-bundled"]
f16 = []

[dependencies]
csv = "1.2"
# Burn
# burn-tch = { path = "../../burn-tch" }

burn = {path = "../../burn", features=["autodiff", "train", "ndarray", "tch"]}

postgres = "0.19.7"
log = "0.4.20"

rand = "0.8.4"
thesaurus = "0.5"
lazy_static = "1.4.0"

# Tokenizer
tokenizers = { version = "0.13.4", default-features = false, features = [
  "onig",
  "http",
] }

# Utils
derive-new = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
